fix(perc-system): parameterize data/data.jdbc metadata rawtypes (#2298)
Slice 4 of parent #2022 (grandparent #2200): real generics for rawtypes
in the data pipeline metadata cluster.

- PSDatabaseMetaData / PSTableMetaData typed maps and collections
- PSMetaDataCache Iterator<?>; PSDsnReader ArrayList<String> + close
- Unit tests for type maps, DSN parse, case-insensitive column index
- Erlang approve: issue-2298-data-jdbc-rawtypes-erlang.md

Fixes #2298
Refs #2022 #2200

> Co-Authored by Grok Build using grok-4.5 with agent main.